# social-media

./: Makefile  README.md  erd.txt  pyproject.toml  requirements.txt
apps/chats/: apps.py
apps/followers/: apps.py
apps/hashtags/: admin.py  api.py  apps.py  models.py  serializer.py  tests.py  urls.py
apps/hashtags/management/commands/: hashtags.py
apps/hashtags/migrations/: 0001_initial.py  0002_alter_hashtags_name_hashtags_unique_hashtag_name.py
apps/posts/: api.py  models.py  permissions.py  serializers.py  urls.py
apps/social_groups/: apps.py
apps/users/: admin.py  api.py  models.py  serializer.py  urls.py
apps/users/migrations/: 0001_initial.py  0002_user_groups_user_is_active_user_is_staff_and_more.py
core/: settings.py  softdelete.py  urls.py
documents/: poetry.md  softdelete.md
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_testmodel.py
polls/static/polls/: style.css
polls/templates/polls/: detail.html  index.html  results.html
